--- a/demo/index.html
+++ b/demo/index.html
@@ -22,6 +22,7 @@
     </custom-style>
     <script>
       window.addEventListener('WebComponentsReady', () => document.querySelector('main').classList.remove('hidden'));
+      window.addEventListener('WebComponentsReady', () => document.querySelector('#test').removePreselectionById("lastMonthButton"));
     </script>
   </head>
   <body>
@@ -29,7 +30,7 @@
       <h3>Basic usage</h3>
       <demo-snippet>
         <template preserve-content>
-          <vcf-date-range-picker label="From" end-label="To"></vcf-date-range-picker>
+          <vcf-date-range-picker id="test" label="From" end-label="To"></vcf-date-range-picker>
           <vcf-date-range-picker placeholder="Enter start date" end-placeholder="Enter end date"></vcf-date-range-picker>
           <vcf-date-range-picker value="1990-01-28" end-value="1990-01-30"></vcf-date-range-picker>
         </template>
