--- a/demo/index.html
+++ b/demo/index.html
@@ -23,6 +23,14 @@
     <script>
       window.addEventListener('WebComponentsReady', () => document.querySelector('main').classList.remove('hidden'));
       window.addEventListener('WebComponentsReady', () => document.querySelector('#test').removePreselectionById("lastMonthButton"));
+      customElements.whenDefined('vcf-date-range-picker').then(function() {
+        const button = document.querySelector('#may2021MonthButton');
+        const dateRangePicker = document.querySelector('#test');
+        button.addEventListener('click', function() {
+          dateRangePicker.value="2021-05-01;2021-05-31";
+          dateRangePicker.close();
+        });
+      });
     </script>
   </head>
   <body>
@@ -30,7 +38,11 @@
       <h3>Basic usage</h3>
       <demo-snippet>
         <template preserve-content>
-          <vcf-date-range-picker id="test" label="From" end-label="To"></vcf-date-range-picker>
+          <vcf-date-range-picker id="test" label="From" end-label="To" >
+            <vaadin-button id="may2021MonthButton" theme="tertiary" part="preset-button" on-tap="document.querySelector('#test')" slot="presets">
+              May 2021
+            </vaadin-button>
+          </vcf-date-range-picker>
           <vcf-date-range-picker placeholder="Enter start date" end-placeholder="Enter end date"></vcf-date-range-picker>
           <vcf-date-range-picker value="1990-01-28" end-value="1990-01-30"></vcf-date-range-picker>
         </template>
