--- a/demo/index.html
+++ b/demo/index.html
@@ -26,6 +26,7 @@
       customElements.whenDefined('vcf-date-range-picker').then(function() {
         const button = document.querySelector('#may2021MonthButton');
         const dateRangePicker = document.querySelector('#test');
+        dateRangePicker.setClassNameForDates("publicHolidays", ["2021-05-01","2021-05-25"]);
         button.addEventListener('click', function() {
           dateRangePicker.value="2021-05-01;2021-05-31";
           dateRangePicker.close();
