feat: add support for hiding side panel

--- a/demo/index.html
+++ b/demo/index.html
@@ -64,11 +64,11 @@
         </template>
       </demo-snippet>
   
-      <h3>Helper text</h3>
+      <h3>Helper text without side panel</h3>
       <p>Use the <code>helper-text</code> attribute or add content to the <code>helper</code> slot to set helper content.</p>
       <demo-snippet id="helper-text">
         <template preserve-content>
-          <vcf-date-range-picker label="Event date">
+          <vcf-date-range-picker hide-side-panel label="Event date">
             <span slot="helper">International date format</span>
           </vcf-date-range-picker>
         </template>
